adding modal-pop-up-thing

--- a/style.css
+++ b/style.css
@@ -14,3 +14,10 @@
     width: 300px;
     margin-left: calc(50% - 150px);
 }
+
+#answer{
+    visibility: hidden;
+    position: absolute;
+    top: 0%;
+    user-select: none;
+}
